# gaitmesh

./: README.md  apply_format.sh  dependencies.rosinstall
.github/workflows/: industrial_ci_action.yml
gaitmesh_ros/: CMakeLists.txt  package.xml
gaitmesh_ros/config/: ballPivoting.mlx
gaitmesh_ros/data/: .gitignore
gaitmesh_ros/include/gaitmesh_ros/: common.hpp  gaitmesh_ros.hpp  lvr2_reconstruction.hpp  meshlab_reconstruction.hpp
gaitmesh_ros/launch/: annotate_cloud_gaits.launch  annotate_cloud_gaits_continuous.launch  anymal_gaitmesh.launch
gaitmesh_ros/msg/: CloudMesh.msg
gaitmesh_ros/rviz/: annotate_cloud_gaits.rviz
gaitmesh_ros/src/: MeshLabReconstruction.cpp  MeshLabReconstruction.h  PclMeshSampling.cpp  PclMeshSampling.h  annotate_cloud_gaits.cpp  annotate_cloud_gaits_continuous.cpp  gaitmesh_ros.cpp  lvr2_reconstruction.cpp  mesh_from_mapping_server.cpp  meshlab_reconstruction.cpp  publish_cloud_meshes.cpp  publish_initial_cloud.cpp
gaitmesh_ros/src/pcl/: PclMeshSampling.cpp  PclMeshSampling.h  vtk_lib_io-impl.hpp  vtk_lib_io.cpp  vtk_lib_io.h
