<?xml version="1.0"?>
<package format="3">
  <name>gaitmesh_ros</name>
  <version>0.0.0</version>
  <description>The gaitmesh_ros package</description>

  <maintainer email="martim@robots.ox.ac.uk">Martim Brandao</maintainer>

  <license>BSD</license>

  <author email="martim@robots.ox.ac.uk">Martim Brandao</author>
  <author email="aladagomer@sabanciuniv.edu">Omer Burak Aladag</author>
  <author email="ioannis@robots.ox.ac.uk">Ioannis Havoutis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>recast_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <exec_depend>meshlab</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>recast_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
</package>
